fix to spacing in post preview column on edit request page

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -2303,9 +2303,6 @@ a {
 		height: auto;
 		min-height: 100%;
 	}
-	.container-post-approval-preview {
-		padding-bottom: 1.5rem;
-	}
 	.container-cocreate-discussion {
 		padding-bottom: 200px;
 	}
